[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/models/blocks.meshlib" type="MeshLibrary" id=1]
[ext_resource path="res://script/3d map/map.gd" type="Script" id=2]
[ext_resource path="res://environment/DeathZone.gd" type="Script" id=3]
[ext_resource path="res://environment/VictoryZone.gd" type="Script" id=4]
[ext_resource path="res://assets/sound/Soundtrack.mp3" type="AudioStream" id=5]
[ext_resource path="res://assets/font/Atma/Atma-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Control.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/image/Pop Up Game Over Time Limit.png" type="Texture" id=9]
[ext_resource path="res://script/2d homepage/PopUp_Exit.gd" type="Script" id=10]

[sub_resource type="Environment" id=1]
background_mode = 1
background_color = Color( 0.164706, 0.592157, 0.541176, 1 )
ambient_light_color = Color( 0.113725, 0.403922, 0.611765, 1 )
fog_enabled = true
fog_color = Color( 0.419608, 0.568627, 0.713726, 1 )
tonemap_mode = 3
adjustment_enabled = true
adjustment_brightness = 0.7
adjustment_contrast = 1.5
adjustment_saturation = 1.2

[sub_resource type="BoxShape" id=2]
extents = Vector3( 150, 1, 150 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 2, 1, 2 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0.882353, 0.364706, 1 )
border_width_left = 50
border_width_right = 50
border_color = Color( 1, 0.882353, 0.364706, 1 )
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024

[node name="Level01" type="Spatial"]
script = ExtResource( 2 )

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource( 1 )
cell_size = Vector3( 4, 4, 4 )
data = {
"cells": PoolIntArray( 65537, 0, 1048576, 65537, 1, 1048576, 65536, 2, 1048578, 65537, 2, 0, 65538, 2, 2, 65536, 3, 655361, 65537, 3, 0, 65538, 3, 1, 65536, 4, 655362, 65537, 4, 1441793, 65538, 4, 1441794, 131072, 65525, 0, 131073, 65525, 0, 131074, 65525, 0, 131072, 65526, 0, 131073, 65526, 5, 131074, 65526, 0, 131072, 65527, 0, 131073, 65527, 0, 131074, 65527, 0, 131072, 65529, 0, 131073, 65529, 0, 131074, 65529, 0, 131072, 65530, 0, 131073, 65530, 0, 131074, 65530, 0, 131073, 65531, 0, 65537, 65532, 4, 65537, 65533, 1048576, 65537, 65534, 1048576, 65537, 65535, 1048576 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, -32, 0 )
}

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.5, 0.75, -0.433013, 0, 0.5, 0.866025, 0.866025, -0.433013, 0.25, 0, 5, 0 )
light_color = Color( 0.972549, 0.901961, 0.752941, 1 )
light_energy = 2.0
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="DeathZone" type="Area" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="DeathZone"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, 0 )
shape = SubResource( 2 )

[node name="VictoryZone" type="Area" parent="."]
script = ExtResource( 4 )
NEXT_LEVEL = "res://environment/Level02.tscn"

[node name="CollisionShape" type="CollisionShape" parent="VictoryZone"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.11466, 7.90907, -38.0531 )
shape = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="Timer" parent="." instance=ExtResource( 8 )]
minutes = 0
seconds = 5

[node name="PopUp_Exit" type="CenterContainer" parent="."]
margin_left = 155.022
margin_top = -500.0
margin_right = 805.022
margin_bottom = -100.0
script = ExtResource( 10 )

[node name="TextureRect" type="TextureRect" parent="PopUp_Exit"]
margin_right = 650.0
margin_bottom = 400.0
texture = ExtResource( 9 )

[node name="VBoxContainer3" type="VBoxContainer" parent="PopUp_Exit"]
margin_left = 250.0
margin_top = 183.0
margin_right = 400.0
margin_bottom = 217.0

[node name="btn_game_over_ok" type="Button" parent="PopUp_Exit/VBoxContainer3"]
margin_right = 150.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0, 0.0509804, 0.419608, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "OKAY"

[node name="Tween" type="Tween" parent="PopUp_Exit"]

[connection signal="body_entered" from="DeathZone" to="DeathZone" method="_on_DeathZone_body_entered"]
[connection signal="body_entered" from="VictoryZone" to="VictoryZone" method="_on_VictoryZone_body_entered"]
[connection signal="pressed" from="PopUp_Exit/VBoxContainer3/btn_game_over_ok" to="PopUp_Exit" method="_on_btn_game_over_ok_pressed"]
