[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/image/Logo.png" type="Texture" id=1]
[ext_resource path="res://assets/font/Atma/Atma-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://script/2d homepage/btn_play.gd" type="Script" id=3]
[ext_resource path="res://script/2d homepage/btn_training.gd" type="Script" id=4]
[ext_resource path="res://script/2d homepage/btn_about.gd" type="Script" id=5]
[ext_resource path="res://script/2d homepage/btn_exit.gd" type="Script" id=6]
[ext_resource path="res://assets/image/Pop Up Exit.png" type="Texture" id=8]
[ext_resource path="res://script/2d homepage/PopUp_Exit.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0.882353, 0.364706, 1 )
border_color = Color( 0.929412, 0.733333, 0.0117647, 1 )
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 0.882353, 0.364706, 1 )
border_color = Color( 0.929412, 0.733333, 0.0117647, 1 )
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 0.882353, 0.364706, 1 )
border_color = Color( 0.929412, 0.733333, 0.0117647, 1 )
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 0.882353, 0.364706, 1 )
border_color = Color( 0.929412, 0.733333, 0.0117647, 1 )
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 1, 0.882353, 0.364706, 1 )
border_width_left = 50
border_width_right = 50
border_color = Color( 1, 0.882353, 0.364706, 1 )
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.862745, 0.207843, 0.207843, 1 )
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024

[node name="home_page" type="Node2D"]
__meta__ = {
"_edit_horizontal_guides_": [ 269.0, -118.0 ],
"_edit_vertical_guides_": [ 479.0 ]
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 960.0
margin_bottom = 540.0
color = Color( 0, 0.760784, 0.796078, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
margin_right = 67.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 67.0
margin_bottom = 14.0
text = "homepage"

[node name="Logo" type="TextureRect" parent="."]
margin_right = 960.0
margin_bottom = 540.0
texture = ExtResource( 1 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_bottom = 0.788
margin_left = 360.0
margin_top = 138.0
margin_right = 597.0
margin_bottom = 404.0

[node name="btn_play" type="Button" parent="VBoxContainer2"]
margin_right = 237.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0, 0.0509804, 0.419608, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 7 )
text = "PLAY"
script = ExtResource( 3 )

[node name="btn_training" type="Button" parent="VBoxContainer2"]
margin_top = 54.0
margin_right = 237.0
margin_bottom = 104.0
custom_colors/font_color = Color( 0, 0.0509804, 0.419608, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 8 )
text = "TRAINING"
script = ExtResource( 4 )

[node name="btn_about" type="Button" parent="VBoxContainer2"]
margin_top = 108.0
margin_right = 237.0
margin_bottom = 158.0
custom_colors/font_color = Color( 0, 0.0509804, 0.419608, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 10 )
text = "ABOUT"
script = ExtResource( 5 )

[node name="btn_exit" type="Button" parent="VBoxContainer2"]
margin_top = 162.0
margin_right = 237.0
margin_bottom = 212.0
custom_colors/font_color = Color( 0, 0.0509804, 0.419608, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 11 )
text = "EXIT"
script = ExtResource( 6 )

[node name="PopUp_Exit" type="CenterContainer" parent="."]
margin_left = 155.022
margin_top = -500.0
margin_right = 805.022
margin_bottom = -100.0
script = ExtResource( 9 )

[node name="TextureRect" type="TextureRect" parent="PopUp_Exit"]
margin_right = 650.0
margin_bottom = 400.0
texture = ExtResource( 8 )

[node name="VBoxContainer3" type="VBoxContainer" parent="PopUp_Exit"]
margin_left = 257.0
margin_top = 164.0
margin_right = 393.0
margin_bottom = 236.0

[node name="btn_exit_y" type="Button" parent="PopUp_Exit/VBoxContainer3"]
margin_right = 136.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0, 0.0509804, 0.419608, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 12 )
text = "YUP"

[node name="btn_exit_n" type="Button" parent="PopUp_Exit/VBoxContainer3"]
margin_top = 38.0
margin_right = 136.0
margin_bottom = 72.0
custom_colors/font_color = Color( 0, 0.0509804, 0.419608, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/normal = SubResource( 13 )
text = "CANCEL"

[node name="Tween" type="Tween" parent="PopUp_Exit"]

[connection signal="pressed" from="VBoxContainer2/btn_play" to="VBoxContainer2/btn_play" method="_on_btn_play_pressed"]
[connection signal="pressed" from="VBoxContainer2/btn_training" to="VBoxContainer2/btn_training" method="_on_btn_training_pressed"]
[connection signal="pressed" from="VBoxContainer2/btn_about" to="VBoxContainer2/btn_about" method="_on_btn_about_pressed"]
[connection signal="pressed" from="VBoxContainer2/btn_exit" to="PopUp_Exit" method="_on_btn_exit_pressed"]
[connection signal="pressed" from="PopUp_Exit/VBoxContainer3/btn_exit_y" to="PopUp_Exit" method="_on_btn_exit_y_pressed"]
[connection signal="pressed" from="PopUp_Exit/VBoxContainer3/btn_exit_n" to="PopUp_Exit" method="_on_btn_exit_n_pressed"]
